[package]
name = "as91896"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
iced = { version = "0.13.1", features = ["lazy"] }
iced_aw = { version = "0.12.2", features = ["tab_bar", "tabs"] }
iced_table = "0.13.0"
rand = "0.9.0"
rusqlite = { version = "0.34.0", features = ["bundled"] }
